Fail to play sound to external DP monitor via the USB-C dock
Found that my ADL-P (i7-1370p) laptop fail to play sound to external DP monitor with connected via USB-C dock when booting with USB-C dock connected. There's no problem if I plug the USB-C dock after boot. And I can't reproduce if connecting to HDMI port instead of DP port. Neither cold boot or warm boot can make any difference. The sound plays OK only after I re-plug the dock.
The pulseaudio switches to HDMI/DP output sink correctly w/o problem even after checking with drm kernel log.
Jan 10 13:21:01 ubuntu kernel: i915 0000:00:02.0: [drm:intel_audio_codec_enable [i915]] [CONNECTOR:304:DP-8][ENCODER:265:DP-MST B] Enable audio codec on pipe B, 36 bytes ELD
Jan 10 13:21:01 ubuntu kernel: i915 0000:00:02.0: [drm:hsw_dp_audio_config_update.isra.0 [i915]] using Maud 512, Naud 16875
Jan 10 13:21:01 ubuntu kernel: i915 0000:00:02.0: [drm:drm_dp_dpcd_write [drm_display_helper]] AUX USBC1/DDI TC1/PHY TC1: 0x02003 AUX <- (ret= 3) 10 00 00
Jan 10 13:21:01 ubuntu kernel: i915 0000:00:02.0: [drm:drm_dp_dpcd_probe [drm_display_helper]] AUX USBC1/DDI TC1/PHY TC1: 0x00000 AUX -> (ret= 1) 12
Jan 10 13:21:01 ubuntu kernel: i915 0000:00:02.0: [drm:drm_dp_dpcd_read [drm_display_helper]] AUX USBC1/DDI TC1/PHY TC1: 0x02002 AUX -> (ret= 4) 01 00 00 00
Jan 10 13:21:01 ubuntu kernel: i915 0000:00:02.0: [drm:intel_dp_check_mst_status [i915]] DPRX ESI: 01 00 00 00
Jan 10 13:21:01 ubuntu pulseaudio[1176]: Monitor name in ELD info is 'BenQ EL2870U' (for device=5)
Jan 10 13:21:01 ubuntu pulseaudio[1176]: Jack 'HDMI/DP,pcm=5 Jack' is now plugged in
Jan 10 13:21:01 ubuntu pulseaudio[1176]: Setting port [Out] HDMI1 to status yes
Jan 10 13:21:01 ubuntu pulseaudio[1176]: Dropped redundant event due to change event.
Jan 10 13:21:01 ubuntu pulseaudio[1176]: default_sink: alsa_output.pci-0000_00_1f.3-platform-sof_sdw.HiFi__hw_sofsoundwire_2__sink -> alsa_output.pci-0000_00_1f.3-platform-sof_sdw.HiFi__hw_sofsoundwire_5__sink
I can't find any error/warning or any suspicious cause for why no sound output via dock. Also tried latest drm-tip kernel 2023y-01m-09d-14h-46m-11s
but the symptom still persists. Can anyone suggest how to identify the cause of the problem? Thanks